Add Amplify deploy config

--- a/amplify.yml
+++ b/amplify.yml
@@ -1,28 +1,31 @@
 version: 1
-applications:
-  - appRoot: mini-payrun-app  # Ensure the correct frontend path here
-    backend:
-      phases:
-        preBuild:
-          commands:
-            - '# Ensure the correct directory structure'
-            - 'cd mini-payrun-app'
-            - 'npm install'
-        build:
-          commands:
-            - 'npm run build'
-    frontend:
-      phases:
-        build:
-          commands:
-            - 'npm run build'   # Add or modify build commands as necessary
-        deploy:
-          commands:
-            - 'amplify publish'  # If using Amplify CLI for deployment
-    artifacts:
-      baseDirectory: mini-payrun-app/dist   # The directory that has your built app
-      files:
-        - '**/*'
-    cache:
-      paths:
-        - node_modules/**/*
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - cd mini-payrun-app
+        - npm ci
+    build:
+      commands:
+        - npm run build
+  artifacts:
+    baseDirectory: mini-payrun-app/dist
+    files:
+      - '**/*'
+  cache:
+    paths:
+      - node_modules/**
+
+backend:
+  phases:
+    preBuild:
+      commands:
+        - cd api
+        - npm ci
+    build:
+      commands:
+        - npm run build
+  artifacts:
+    baseDirectory: api
+    files:
+      - '**/*'
